--- a/AG44.cbp
+++ b/AG44.cbp
@@ -32,7 +32,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Edge.h" />
+		<Unit filename="include/Graph.h" />
+		<Unit filename="include/Vertex.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Edge.cpp" />
+		<Unit filename="src/Graph.cpp" />
+		<Unit filename="src/Vertex.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
